--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+Brotli==1.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 dj-database-url==2.1.0
@@ -22,3 +23,4 @@ typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.5
 waitress==2.1.2
+whitenoise==6.6.0
